I added a copy-constructor